<resources>
    <string name="app_name">UTI APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SignUp">Register Now</string>
    <string name="SignIn">Login</string>
    <string name="logintxt">orloginwith</string>
    <string name="forgotpasstxt">Forgot Password</string>
    <string name="allreadyaccount">Don’t Have Account?</string>
    <string name="title_activity_show_all_category">ShowAllCategoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>